django-no-helm/django-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: django-ingress
  annotations:
    kubernetes.io/ingress.class: contour
    ingress.kubernetes.io/force-ssl-redirect: "true" # Redirect HTTP to HTTPS
    cert-manager.io/cluster-issuer: "letsencrypt-prod" # For automated TLS certificates using Cert-Manager
spec:
  tls:
  - hosts:
    - place.whgazetteer.org # Temporary subdomain, pending switch to 'whgazetteer.org'
    secretName: django-tls # TLS secret for HTTPS
  rules:
  - host: place.whgazetteer.org # Temporary subdomain, pending switch to 'whgazetteer.org'
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: django-service
            port:
              number: 8000 # Must match Django service port
